# MedHackathon

./: .gitignore  README.md  RENE_Model.ipynb  med_dashboard.py  pyproject.toml
models/RENE/: cfg.yaml  class-id.txt
src/: Gemini_API_Test.py  RENE_Model.ipynb  cfg_parse.py  med_dashboard.py
